--- a/pang/72411_메뉴리뉴얼.md
+++ b/pang/72411_메뉴리뉴얼.md
@@ -68,3 +68,63 @@ class Solution {
   }
 }
 ```
+
+
+
+## 코드 추가
+
+재귀함수 리팩토링
+
+```java
+public static String[] solution(String[] orders, int[] course) {
+    List<String> answer = new ArrayList<>();
+
+    //주문 요리 알파벳순으로 정렬
+    for (int i = 0; i < orders.length; i++) {
+        char[] order = orders[i].toCharArray();
+        Arrays.sort(order);
+        StringBuilder sb = new StringBuilder();
+        for (char ch : order) sb.append(ch);
+        orders[i] = sb.toString();
+    }
+
+    for (int targetCnt : course) {
+      map = new HashMap<>();
+
+      // 1. orders[i]로 부터 course 개수에 맞게 뽑아낸다. 
+      // 2. map에 같은 것이 있으면 넘어가기
+      for (int i = 0; i < orders.length; i++) {
+        findCourse("", orders[i], targetCnt);
+      }
+      
+      // 3. map에 있는 코스 조합들 개수 확인
+      if (map.isEmpty()) continue;
+
+      List<Integer> valueList = new ArrayList<>(map.values());
+      int maxCnt = Collections.max(valueList);
+
+      // 4. 최대 개수 다시 찾아서 answer에 넣기
+      for (String selectedCourse : map.keySet()) {
+        if (maxCnt == map.get(selectedCourse) && map.get(selectedCourse) >= 2) {
+          answer.add(selectedCourse);
+        }
+      }
+    }
+
+    answer.sort((o1, o2) -> o1.compareTo(o2));
+
+    return answer.stream().toArray(String[]::new);
+  }
+
+  static void findCourse(String selectedOrder, String order, int targetCnt) {
+    if (targetCnt == 0) {
+      //조합 만들었다면
+      map.put(selectedOrder, map.getOrDefault(selectedOrder, 0) + 1);
+    }
+
+    for (int i = 0; i < order.length(); i++) {
+      findCourse(selectedOrder + order.charAt(i), order.substring(i + 1), targetCnt - 1);
+    }
+  }
+```
+
