--- a/pang/20240912_줄서는방법_12936.md
+++ b/pang/20240912_줄서는방법_12936.md
@@ -46,3 +46,57 @@ class Solution {
 }
 ```
 
+규칙 찾아서 풀이
+
+```java
+class Solution {
+    long[] factoList = new long[21];
+  boolean[] selected = new boolean[21];
+
+  public int[] solution(int n, long k) {
+    factoList[1] = 1;
+    setFacto(n - 1);
+
+    int[] answer = new int[n];
+
+    for (int i = 0; i < n; i++) {
+
+      // 1을 뺀 후 몫을 구하면 
+      // 몫 + 1은 1~n까지 중 선택 안된 수임
+      long d = 0l;
+      if (i != n - 1) {
+        d = (k - 1) / factoList[n - (i + 1)];
+      }
+      int idx = 0;
+
+      for (int j = 1; j <= n; j++) {
+        if (!selected[j])
+          idx++;
+
+        if (idx == (int) d + 1) {
+          selected[j] = true;
+          answer[i] = j;
+          break;
+        }
+      }
+
+      if (i != n - 1) {
+        k = (k - 1) % factoList[n - (i + 1)] + 1;
+      }
+    }
+
+    return answer;
+  }
+
+  private long setFacto(int n) {
+    if (n == 0 || n == 1)
+      return 1;
+
+    if (factoList[n] != 0l)
+      return factoList[n];
+
+    return factoList[n] = setFacto(n - 1) * n;
+  }
+}
+```
+
